# heskbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  tests.py
core/: __init__.py  api.py  bot.py  cache.py  clients_route.py  config.py  content.py  kb_route.py  keyboards.py  main_route.py  stats_route.py  tickets_route.py
tools/: utils.py
