[tool.poetry]
name = "heskbot"
version = "0.1.0"
description = ""
authors = ["Nickolsky <romb.intu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
requests = "^2.31.0"
pytest = "^8.1.1"
redis = "^5.0.3"
aioredis = "^2.0.1"
pytest-asyncio = "^0.23.6"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
